# SFM

./: CMakeLists.txt  LICENSE  README.md  setup.py
core/: base.h  graph.h  linalg.h  oracle.h  partial_vector.h  reporter.h  set_utils.h  sfm_algorithm.h  utils.h
core/algorithms/: brute_force.h  sfm_fw.h  sfm_iff.h
core/graph/: divide_conquer.h  generalized_cut.h  hypergraph_cut.h  maxflow.h  stcut.h
core/oracles/: iwata_test_function.h  modular.h
core/python/: gencut.cpp  gencut.h  py_utils.h  pyarray_symbol_core.h  pyarray_symbol_gencut.h  sfm_core.h
pysfm/: _core.pyx  _gencut.pyx  graph_prox.py  minimize.py  utils.py
pysfm/oracles/: __init__.py  graph_cut.py  hypergraph.py  iwata_test_function.py  modular.py
test/: CMakeLists.txt  test.cpp  test_base.h  test_linalg.h  test_oracle.h  test_set_utils.h
test/algorithms/: test_brute_force.h  test_sfm_fw.h  test_sfm_iff.h
test/graph/: test_divide_conquer.h  test_maxflow.h
test/oracles/: test_iwata_test_function.h  test_modular.h
